--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,6 +1,9 @@
 @import "base-variables";
 @import "mixins";
 
+// General
+$dark-site-bg-color: #181a1b !default;
+
 // Headers
 $header-heading-color: #fff !default;
 $header-bg-color: #159957 !default;
